--- a/src/Job.css
+++ b/src/Job.css
@@ -5,7 +5,7 @@
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-  justify-content: space-evenly;
+  justify-content: space-between;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   flex-direction: row;
   flex-wrap: nowrap;
